2010-03-06  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el: Use the new versioned API endpoint at
	"api.twitter.com/1" instead of the legacy API endpoint to fit
	twitter API specification as of 2010-02-17.
	(twittering-timeline-spec-to-host-method): Likewise.
	(twittering-host-method-to-timeline-spec): Likewise.
	(twittering-edit-post-status): Likewise.
	(twittering-update-status-from-minibuffer): Likewise.
	(twittering-manage-friendships): Likewise.
	(twittering-manage-favorites): Likewise.
	(twittering-update-lambda): Likewise.
	(twittering-update-jojo): Likewise.
	(twittering-http-post): Update a comment.

	* twittering-mode.el (twittering-http-get-default-sentinel): Add
	an additional information which is related to obsolete
	public_timeline.

	* twittering-mode.el (twittering-http-post): Set parameter
	`source' here.
	(twittering-edit-post-status): Adjust callers.
	(twittering-update-status-from-minibuffer): Likewise.
	(twittering-manage-friendships): Likewise.
	(twittering-manage-favorites): Likewise.
	(twittering-update-lambda): Likewise.
	(twittering-update-jojo): Likewise.
	(twittering-native-retweet): Likewise.

	* twittering-mode.el (twittering-http-default-sentinel): Call
	`twittering-switch-timeline' and `twittering-release-process' only
	when `proc' is non-nil.

	* twittering-mode.el (twittering-http-get-default-sentinel):
	Change style of an additional error message.
	(twittering-http-get-list-index-sentinel): Likewise.
	(twittering-http-post-default-sentinel): Likewise.

2010-03-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-toggle-reverse-mode): invoke
	`twittering-render-timeline' correctly.

	* twittering-mode.el (twittering-make-display-spec-for-icon): add
	2 pixels margin to icons in order to make the cursor stand out.

2010-03-01  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-generate-formater): changed into
	a function.